# sst

./: .gitignore  CMakeLists.txt  README.md  build_linux.ps1  build_linux.sh  format_ts.py  testlog2.txt
doc/: ARCHITECTURE.md  CONTRIBUTING.md
src/: CMakeLists.txt  FileWriter.cpp  FileWriter.h  Main.qml  TranslationManager.cpp  TranslationManager.h  main.cpp
src/assets/: services.json
src/modules/controls/: CMakeLists.txt
src/modules/controls/qml/: AlphaKeyboard.qml  BackButton.qml  Button.qml  CardInput.qml  CashValidator.qml  IbanInput.qml  LanguageToggle.qml  NumPad.qml  NumberInput.qml  PhoneInput.qml  StringInput.qml  StringKeyboard.qml  TextArea.qml  TextField.qml  Tile.qml
src/modules/finance/: CMakeLists.txt  FinanceBackend.cpp  FinanceBackend.h  TransactionController.cpp  TransactionController.h  TransactionSession.cpp  TransactionSession.h  TransactionStatus.h
src/modules/hardware/: CMakeLists.txt  PortScanner.cpp  PortScanner.h  SystemInfo.h  ValidatorController.cpp  ValidatorController.h  ValidatorDriver.cpp  ValidatorDriver.h  ValidatorEmulator.cpp  ValidatorEmulator.h  ValidatorInterface.cpp  ValidatorInterface.h  ValidatorTypes.h  systeminfo.cpp
src/modules/hardware/qml/: HardwareInfo.qml
src/modules/services/: CMakeLists.txt  ServiceTreeItem.cpp  ServiceTreeItem.h  ServiceTreeModel.cpp  ServiceTreeModel.h
src/modules/style/: CMakeLists.txt
src/modules/style/qml/: DarkStyle.qml  DarkStyle_copy.qml  SimbankPallete.qml  Style.qml
src/modules/ui/: CMakeLists.txt
src/modules/ui/qml/: AttractModeOverlay.qml  Footer.qml  GradientSelectionWindow.qml  Header.qml  Home.qml  MainBackground.qml  PanelBackground.qml  ServiceTileView.qml  StyleConfigurator.qml  ValidatorEmulatorWindow.qml
src/services/testservice/: CMakeLists.txt  ServiceModel.cpp  ServiceModel.h
src/services/testservice/qml/: NumericInputScreen.qml  Screen1.qml  Screen2.qml  Screen3.qml  ScreenIban.qml  ScreenInputCardNumber.qml  ScreenInputIban.qml  ScreenInputNumber.qml  ScreenInputString.qml  ScreenInsertCash.qml  ScreenPhone.qml  ScreenString.qml  Service.qml
src/translations/: sst_en.ts  sst_kk.ts  sst_ky.ts  sst_ru.ts
tests/cpp/: CMakeLists.txt  tst_TranslationManager.cpp
tests/cpp/modules/hardware/: tst_systeminfo.cpp
tests/cpp/services/testservice/: tst_ServiceModel.cpp
tests/qml/: CMakeLists.txt  qml_test_runner_app.cpp  qml_test_runner_controls.cpp  qml_test_runner_hardware.cpp  qml_test_runner_testservice.cpp  tst_Main.qml
tests/qml/modules/controls/: tst_Button.qml  tst_TextArea.qml  tst_TextField.qml
tests/qml/modules/hardware/: tst_HardwareInfo.qml
tests/qml/services/testservice/: tst_Screen1.qml  tst_Screen2.qml  tst_Screen3.qml  tst_Service.qml
